# TrabajoIA

./: QUICKSTART.md  README.md  mcp.json
server/: .gitignore  README.md  pyproject.toml
server/config/: .env.example
server/docs/: README.md  WORKING_PAPER_MCP_ARCHITECTURE.md  architecture.md
server/docs/Changelog/: CHANGELOG.md
server/docs/Release_notes/: RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.5.md  RELEASE_NOTES_v0.1.6.md  RELEASE_NOTES_v0.1.7.md  RELEASE_NOTES_v0.1.8.md  RELEASE_NOTES_v0.1.9.md
server/docs/api/: FRED_CATEGORY_CHILDREN_REFERENCE.MD  FRED_CATEGORY_REFERENCE.MD  FRED_CATEGORY_RELATED_REFERENCE.MD  FRED_CATEGORY_RELATED_TAGS_REFERENCE.MD  FRED_CATEGORY_SERIES_REFERENCE.MD  FRED_CATEGORY_TAGS_REFERENCE.MD  FRED_OBSERVATIONS_REFERENCE.MD  FRED_RELATEDTAGS_REFERENCE.MD  FRED_SEARCHSERIESRELATEDTAGS_REFERENCE.MD  FRED_SEARCHSERIESTAGS_REFERENCE.MD  FRED_SEARCH_REFERENCE.md  FRED_SERIESBYTAGS_REFERENCE.MD  FRED_SERIESTAGS_REFERENCE.MD  FRED_TAGS_REFERENCE.MD
server/docs/guides/: IMPLEMENTACION_NUEVA_TOOL_GUIA.md  MCP_PROJECT_TESTING_GUIDE.md  VERSION_UPDATE_GUIDE.md
server/docs/planning/: analyze_gdp_cross_country_proposal.md  analyze_gdp_mcp_compatibility_review.md  v0.2.0_expansion_plan.md
server/docs/reports/: test-report.md
server/docs/sessions/: SESSION_SUMMARY_2025-11-01.md
server/docs/workflows/: ANALYZE_GDP_CROSS_COUNTRY_REFERENCE.md  COMPARE_INFLATION_REFERENCE.md  GDP_ORCHESTRATOR_PROMPT.md  GDP_TOOL_PROGRESS_REPORT.md  README.md  SERIES_ID_CORRECTIONS_2025-11-03.md  compare_inflation_test_report.md
server/src/dotenv/: __init__.py
server/src/trabajo_ia_server/: __init__.py  config.py  (+2 more)
server/tests/: __init__.py  conftest.py
(+87 files in other folders)
